# TWLSaveTool

./: .gitignore  CMakeLists.txt  DevkitArm3DS.cmake  LICENSE  Makefile  README.md  TWLSaveTool.xml  _Makefile
app/: BannerAudio.bcwav  DSLite_BootSound.cwav  IcnSettings.txt  TWLSaveTool.xml  banner.bnr  banner.cfgx  build-cia.rsf  icon.icn
cmake/: Tools3DS.cmake
include/: SPI.h  TWLCard.h  errors.h
source/: SPI.cpp  TWLCard.cpp  main.cpp
